--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -1,3 +1,83 @@
-<img src="img/taro.png">
-<h1>山田太郎</h1>
-<p>UX/UIデザイナー見習いです</p>
+<!DOCTYPE html>
+<html lang="ja">
+<head＞
+<meta charaset="utf-8">
+<title>太郎のポートフォリオサイト</title>
+<link rel="icon" href＝"favicon.ico"＞
+<meta name="description" content="太郎のポートフォリオサイトです．"＞
+</head>
+<body>
+  <header>
+    <!--
+  ol:(o)rderd (l)ist
+ul:(u)nordered(l)ist
+
+li:(l)isst(item)
+-->
+    <nav>
+      <li>
+        <a href="index.html">
+        HOME
+        </a>
+      </li>
+      <li>
+        <a href="about.html">
+        ABOUT
+        </a>
+      </li>
+      </nav>
+      <img src="img/header.png" width="400" height="130" alt="ヘッダー画像">
+    </header>
+
+<section>
+  <img src="img/taro.png" width="140" height="140" alt="太郎のアイコン">
+  <h1>山田太郎</h1>
+  <p>UX/UIデザイナー見習いです</p>
+
+  <section>
+    <img src="img/work1.png" width="400" height="260" alt="勇者ゲーム">
+    <h1>勇者ゲーム</h1>
+    <p>楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
+      楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
+      楽しいアプリです．楽しいアプリです.</p>
+    </section>
+
+    <section>
+      <img src="img/work2.png" width="400" height="260" alt="宝探しゲーム">
+      <h1>宝探しゲーム</h1>
+      <p>楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
+        楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
+        楽しいアプリです．楽しいアプリです.</p>
+      </section>
+
+      <section>
+        <img src="img/work3.png" width="400" height="260" alt="神経衰弱">
+        <h1>神経衰弱</h1>
+        <p>楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
+          楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
+          楽しいアプリです．楽しいアプリです.</p>
+        </section>
+  </section>
+
+<footer>
+  <ul>
+  <li>
+    <a href="mailto:taguchi@gmail.com" target="_brank">
+      <img src="img/mail.png" width="20" height="20" alt="メール送信">
+    </a>
+  </li>
+  <li>
+    <a href="https://dotinstall.com" target="_brank">
+      <img src="img/blog.png" width="20" height="20" alt="ブログサイトへ">
+    </a>
+  </li>
+  <li>
+    <a href="https://dotinstall.com "target="_brank">
+      <img src="img/photos.png" width="20" height="20" alt="写真サイトへ">
+    </a>
+    </li>
+  </ul>
+  <p>(c)Taro Yamada</p>
+  </footer>
+</body>
+</html>
