--- a/MyPortfolio/about.html
+++ b/MyPortfolio/about.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head＞
-<meta charaset="utf-8">
+<meta charset="utf-8">
 <title>山田太郎について</title>
 <link rel="icon" href＝"favicon.ico"＞
 <meta name="description" content="山田太郎について"＞
+<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
-    <!--
-  ol:(o)rderd (l)ist
-ul:(u)nordered(l)ist
 
-li:(l)isst(item)
--->
     <nav>
-      <li>
+      <ul>
+      <li >
         <a href="index.html">
         HOME
         </a>
       </li>
-      <li>
+      <li class="current">
         <a href="about.html">
         ABOUT
         </a>
       </li>
+    </ul>
       </nav>
-      <img src="img/header.png" width="400" height="130" alt="ヘッダー画像">
+
     </header>
 
-<section>
-  <img src="img/taro.png" width="140" height="140" alt="太郎のアイコン">
+<section class="about">
+  <img src="img/taro.png" width="140" height="140" alt="太郎のアイコン" class="icon">
   <h1>山田太郎</h1>
   <p>山田太郎の紹介です．山田太郎の紹介です．山田太郎の紹介です．
     山田太郎の紹介です．山田太郎の紹介です．山田太郎の紹介です．
@@ -43,17 +41,17 @@ li:(l)isst(item)
 <footer>
   <ul>
   <li>
-    <a href="mailto:taguchi@gmail.com" target="_brank">
+    <a href="mailto:taguchi@gmail.com" target="_blank">
       <img src="img/mail.png" width="20" height="20" alt="メール送信">
     </a>
   </li>
   <li>
-    <a href="https://dotinstall.com" target="_brank">
+    <a href="https://dotinstall.com" target="_blank">
       <img src="img/blog.png" width="20" height="20" alt="ブログサイトへ">
     </a>
   </li>
   <li>
-    <a href="https://dotinstall.com "target="_brank">
+    <a href="https://dotinstall.com" target="_blank">
       <img src="img/photos.png" width="20" height="20" alt="写真サイトへ">
     </a>
     </li>
