--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head＞
-<meta charaset="utf-8">
+<head>
+<meta charset="utf-8">
 <title>太郎のポートフォリオサイト</title>
-<link rel="icon" href＝"favicon.ico"＞
-<meta name="description" content="太郎のポートフォリオサイトです．"＞
+<link rel="icon" href="favicon.ico">
+<meta name="description" content="太郎のポートフォリオサイトです."＞
+
+<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
-    <!--
-  ol:(o)rderd (l)ist
-ul:(u)nordered(l)ist
-
-li:(l)isst(item)
--->
-    <nav>
-      <li>
+      <nav>
+        <ul>
+      <li class="current">
         <a href="index.html">
         HOME
         </a>
@@ -25,54 +22,58 @@ li:(l)isst(item)
         ABOUT
         </a>
       </li>
+    </ul>
       </nav>
-      <img src="img/header.png" width="400" height="130" alt="ヘッダー画像">
+
     </header>
 
 <section>
-  <img src="img/taro.png" width="140" height="140" alt="太郎のアイコン">
+  <img src="img/taro.png" width="140" height="140" alt="太郎のアイコン" class="icon">
   <h1>山田太郎</h1>
   <p>UX/UIデザイナー見習いです</p>
 
-  <section>
-    <img src="img/work1.png" width="400" height="260" alt="勇者ゲーム">
-    <h1>勇者ゲーム</h1>
-    <p>楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
-      楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
-      楽しいアプリです．楽しいアプリです.</p>
-    </section>
+  <div class="works">
 
     <section>
-      <img src="img/work2.png" width="400" height="260" alt="宝探しゲーム">
-      <h1>宝探しゲーム</h1>
+      <img src="img/work1.png" width="400" height="260" alt="勇者ゲーム">
+      <h1>勇者ゲーム</h1>
       <p>楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
         楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
         楽しいアプリです．楽しいアプリです.</p>
       </section>
 
       <section>
-        <img src="img/work3.png" width="400" height="260" alt="神経衰弱">
-        <h1>神経衰弱</h1>
+        <img src="img/work2.png" width="400" height="260" alt="宝探しゲーム">
+        <h1>宝探しゲーム</h1>
         <p>楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
           楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
           楽しいアプリです．楽しいアプリです.</p>
         </section>
+
+        <section>
+          <img src="img/work3.png" width="400" height="260" alt="神経衰弱">
+          <h1>神経衰弱</h1>
+          <p>楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
+            楽しいアプリです．楽しいアプリです．楽しいアプリです．楽しいアプリです．
+            楽しいアプリです．楽しいアプリです.</p>
+          </section>
+  </div>
   </section>
 
 <footer>
   <ul>
   <li>
-    <a href="mailto:taguchi@gmail.com" target="_brank">
+    <a href="mailto:taguchi@gmail.com" target="_blank">
       <img src="img/mail.png" width="20" height="20" alt="メール送信">
     </a>
   </li>
   <li>
-    <a href="https://dotinstall.com" target="_brank">
+    <a href="https://dotinstall.com" target="_blank">
       <img src="img/blog.png" width="20" height="20" alt="ブログサイトへ">
     </a>
   </li>
   <li>
-    <a href="https://dotinstall.com "target="_brank">
+    <a href="https://dotinstall.com" target="_blank">
       <img src="img/photos.png" width="20" height="20" alt="写真サイトへ">
     </a>
     </li>
