--- a/MyPortfolio/about.html
+++ b/MyPortfolio/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head＞
+<head>
 <meta charset="utf-8">
 <title>山田太郎について</title>
-<link rel="icon" href＝"favicon.ico"＞
-<meta name="description" content="山田太郎について"＞
+<link rel="icon" href＝"favicon.ico">
+<meta name="description" content="山田太郎について">
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 
     <nav>
       <ul>
-      <li >
+      <li>
         <a href="index.html">
         HOME
         </a>
