--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8">
 <title>太郎のポートフォリオサイト</title>
 <link rel="icon" href="favicon.ico">
-<meta name="description" content="太郎のポートフォリオサイトです."＞
-
-<link rel="stylesheet" href="css/styles.css">
+ <meta name="description" content
+ ="太郎のポートフォリオサイトです">
+ <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
@@ -20,20 +20,19 @@
       <li>
         <a href="about.html">
         ABOUT
-        </a>
-      </li>
-    </ul>
+         </a>
+        </li>
+       </ul>
       </nav>
-
     </header>
 
 <section>
-  <img src="img/taro.png" width="140" height="140" alt="太郎のアイコン" class="icon">
+  <img src="img/taro.png" width="140" height="140" alt="太郎のアイコン"
+  class="icon">
   <h1>山田太郎</h1>
   <p>UX/UIデザイナー見習いです</p>
 
   <div class="works">
-
     <section>
       <img src="img/work1.png" width="400" height="260" alt="勇者ゲーム">
       <h1>勇者ゲーム</h1>
