--- a/MyPortfolioProject/public/index.html
+++ b/MyPortfolioProject/public/index.html
@@ -29,7 +29,7 @@
 <section>
   <img src="img/taro.png" width="140" height="140" alt="太郎のアイコン"
   class="icon">
-  <h1>山田太郎</h1>
+  <h1>山田二郎</h1>
   <p>UX/UIデザイナー見習いです</p>
 
   <div class="works">
