--- a/JavaScriptBasics/index.html
+++ b/JavaScriptBasics/index.html
@@ -2,12 +2,37 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>
-    JavaScript Basics
-    </title>
-    <body>
+  <title>JavaScript Basics</title>
+  <style>
+  /* .box{
+    width: 100px;
+    height: 100px;
+    background: gray;
+  }
+  .border-pink{
+    border-bottom:5px sold pink;
+  } */
+  .hidden{
+    display:none;
+  }
+</style>
 
-        <script src="js/main.js"></script>
-      </body>
   </head>
+    <body>
+      <!-- <input type="text" value="hello"> -->
+      <!-- <textarea>hello hello</textarea> -->
+      <!-- <div class="box"></div> -->
+
+      <!-- <button>OK</button> -->
+      <!-- <div></div> -->
+      <p>hello.hello.hello.hello.hello.hello.hello.
+        hello.hello.hello.hello.hello.hello.hello.
+        hello.hello.hello.hello.hello.hello.hello.
+        <span class="hidden">hello.hello.hello.hello.
+          hello.hello.hello.hello.hello.hello.hello.</span>
+          <a href="">read more...</a>
+        </p>
+<script src="js/main.js"></script>
+      </body>
+
 </html>
